Updated to be modularized ready for Java 11